--- a/config.yml
+++ b/config.yml
@@ -61,10 +61,12 @@ homebrew_installed_packages:
   - node
   - nvm
   - ssh-copy-id
+  - theseal/ssh-askpass/ssh-askpass
   - tree
   - cowsay
   - readline
   - openfortivpn
+  - openssh
   - openssl
   - pv
   - qt5
@@ -92,6 +94,7 @@ homebrew_cask_apps:
   - sequel-ace
   #- slack
   - transmit
+  - yubico-yubikey-manager
 
 # See `geerlingguy.mas` role documentation for usage instructions.
 mas_installed_apps: []
