--- a/config.yml
+++ b/config.yml
@@ -82,20 +82,22 @@ homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
   - clion
   - docker
-  #- dropbox
-  #- firefox
+  #- dropbox # for now installed manually via c24 sc
+  #- firefox # for now installed manually via c24 sc
   - goland
   - handbrake
   - kdiff3
+  #- keepassxc # for now installed manually via c24 sc
   - libreoffice
   - licecap
   - meld
   - nextcloud
   - pycharm
   - sequel-ace
-  #- slack
+  #- slack # for now installed manually via c24 sc
   - transmit
   - yubico-yubikey-manager
+  #- zoom # for now installed manually via c24 sc
 
 # See `geerlingguy.mas` role documentation for usage instructions.
 mas_installed_apps: []
