--- a/config.yml
+++ b/config.yml
@@ -87,6 +87,7 @@ homebrew_cask_apps:
   #- firefox # for now installed manually via c24 sc
   - goland
   - handbrake
+  - intellij-idea
   - kdiff3
   #- keepassxc # for now installed manually via c24 sc
   - libreoffice
