--- a/tasks/dotfiles-config.yml
+++ b/tasks/dotfiles-config.yml
@@ -41,7 +41,7 @@
       alias tarxz='tar -xJf'
 
       export PATH="$HOME/Library/Python/3.9/bin:/opt/homebrew/bin:$HOME/bin:$PATH"
-      export SSH_AUTH_SOCK="$HOME/.ssh/agent"
+      #export SSH_AUTH_SOCK="$HOME/.ssh/agent"
 
       # for VPN access to various servers
       alias vpn-reda-hetzner='ssh-add ~/.ssh/id_markus-for-c24-servers && sudo openfortivpn -c ~/data/keys/markus_borris@openfortivpn-hetzner.cfg'
