--- a/tasks/dotfiles-config.yml
+++ b/tasks/dotfiles-config.yml
@@ -46,3 +46,17 @@
 
       # for VPN access to various servers
       alias vpn-reda-hetzner='ssh-add ~/.ssh/id_markus-for-c24-servers && sudo openfortivpn -c ~/data/keys/markus_borris@openfortivpn-hetzner.cfg'
+
+      # autocompletion for ssh host aliases, only needed on Mac
+      _ssh()
+      {
+          local cur prev opts
+          COMPREPLY=()
+          cur="${COMP_WORDS[COMP_CWORD]}"
+          prev="${COMP_WORDS[COMP_CWORD-1]}"
+          opts=$(grep '^Host' ~/.ssh/config ~/.ssh/config.d/* 2>/dev/null | grep -v '[?*]' | cut -d ' ' -f 2-)
+
+          COMPREPLY=( $(compgen -W "$opts" -- ${cur}) )
+          return 0
+      }
+      complete -F _ssh ssh
