--- a/tasks/dotfiles-config.yml
+++ b/tasks/dotfiles-config.yml
@@ -30,6 +30,8 @@
       #alias g='git'
       #alias gs='git status -s'
       #alias gr='[! -z `git rev-parse --show-cdup`] && cd `git rev-parse --show-cdup || pwd`'
+      alias rsync='rsync -vP'
+      alias rsynca='rsync -vPaAX'
 
       # vim for large files
       alias vimlarge='vim -u "NONE" -c "set ruler"'
