--- a/tasks/dotfiles-config.yml
+++ b/tasks/dotfiles-config.yml
@@ -31,7 +31,7 @@
       #alias gs='git status -s'
       #alias gr='[! -z `git rev-parse --show-cdup`] && cd `git rev-parse --show-cdup || pwd`'
       alias rsync='rsync -vP'
-      alias rsynca='rsync -vPaAX'
+      alias rsynca='rsync -vPa'
 
       # vim for large files
       alias vimlarge='vim -u "NONE" -c "set ruler"'
